# czkawka-tauri

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-CZKAWKA  README.md  UPGRADE_LOG.md  biome.json  build-optimized.ps1  justfile  package.json  pnpm-lock.yaml  test-image-formats.js  test.avif  test.jxl  test_format_support.rs  verify-setup.js
.cargo/: config.toml
.github/workflows/: bundle-dry-run.yml  release.yml
.zed/: settings.json
assets/: icon.icns
scripts/: prepare-release.ts  release.ts  run-tauri.ts  run.ts  set-pkg-version.ts
tauri/: Cargo.toml  info.plist  tauri.conf.json  tauri.ffmpeg.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
tauri/capabilities/: default.json
tauri/src/: bad_extensions.rs  big_files.rs  broken_files.rs  delete_files.rs  duplicate_files.rs  empty_files.rs  empty_folders.rs  ffmpeg.rs  image.rs  invalid_symlinks.rs  main.rs  move_files.rs  music_duplicates.rs  progress.rs  rename_ext.rs  save_result.rs  scaner.rs  settings.rs  similar_images.rs  similar_videos.rs  state.rs  temporary_files.rs  utils.rs
ui/: global.css  index.html  input.css  output.css  package.json  vite.config.ts
ui/src/: app.tsx  consts.ts  global.d.ts  ipc.ts  main.tsx  shim.d.ts  types.ts
ui/src/atom/: big-files.ts  duplicate-files.ts  language.ts  preset.ts  primitive.ts  settings.ts  table.ts  theme.ts  tools.ts
ui/src/components/: alert-dialog.tsx  checkbox-with-label.tsx  data-table.tsx  edit-input.tsx  form.tsx  hover-tip.tsx  index.ts  input-number.tsx  label-checkbox.tsx  one-alert-dialog.tsx  one-select.tsx  operation-button.tsx  search-input.tsx  select-composition.tsx  select.tsx  simple-form.tsx  slider-value.tsx  toast.tsx  tooltip-button.tsx
ui/src/components/custom/: textarea.tsx  tooltip.tsx
ui/src/components/shadcn/: alert-dialog.tsx  button.tsx  checkbox.tsx  context-menu.tsx  data-table.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  input.tsx  label.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
ui/src/hooks/: index.ts  use-listen-effect.ts  use-translation.ts
ui/src/i18n/: en.ts  index.ts  zh.ts
ui/src/styles/: index.ts  variants.ts
ui/src/types/: global.d.ts  index.ts  sec.d.ts  tanstack-table.d.ts
ui/src/utils/: cn.ts  common.ts  convert.ts  event.ts  migrate.ts  table-helper.ts
ui/src/views/: app-body.tsx  app-header.tsx  bad-extensions.tsx  big-files.tsx  bottom-bar.tsx  broken-files.tsx  clickable-image-preview.tsx  delete-files.tsx  dirs-actions.tsx  duplicate-files.tsx  empty-files.tsx  empty-folders.tsx  image-preview.tsx  invalid-symlinks.tsx  move-files.tsx  move-operation.tsx  music-duplicates.tsx  operation.tsx  operations.tsx  preset-select.tsx  rename-ext.tsx  row-selection-menu.tsx  save-result.tsx  scan-button.tsx  scan-result-table.tsx  settings.tsx  sidebar-image-preview.tsx  similar-images.tsx  similar-videos.tsx  table.tsx  temporary-files.tsx  theme-toggle.tsx  tool-settings.tsx  tool-tabs.tsx
ui/src/views/tools/: bad-extensions.tsx  big-files.tsx  broken-files.tsx  duplicate-files.tsx  empty-files.tsx  empty-folders.tsx  invalid-symlinks.tsx  music-duplicates.tsx  similar-images.tsx  similar-videos.tsx  temporary-files.tsx
