[package]
name = "czkawka-tauri"
version = "0.1.0"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "Another GUI of Czkawka built for macOS and Windows"
repository = "https://github.com/shixinhuang99/czkawka-tauri"
license = "MIT"
publish = false

[[bin]]
name = "CzkawkaTauri"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
crossbeam-channel = "0.5.14"
czkawka_core = "8.0.0"
dircpy = { version = "0.3.19", default-features = false }
directories = "6.0.0"
home = "0.5.11"
image_hasher = "2.0.0"
infer = "0.19.0"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-opener = "2.2.6"
trash = "5.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
