[package]
name = "czkawka-tauri"
version = "1.0.2"
edition = "2024"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "A Tauri frontend of Czkawka on macOS and Windows"
repository = "https://github.com/shixinhuang99/czkawka-tauri"
license = "MIT"
publish = false

[[bin]]
name = "CzkawkaTauri"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
crossbeam-channel = "0.5.14"
czkawka_core = { version = "9.0.0", default-features = false }
dircpy = { version = "0.3.19", default-features = false }
home = "0.5.11"
humansize = "2.1.3"
image = { version = "0.25.6", features = ["png", "jpeg", "webp"] }
image_hasher = "3.0.0"
infer = "0.19.0"
jxl-oxide = { version = "0.12.2", features = ["image"] }
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-single-instance = "2.2.2"
trash = "5.2.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
ffmpeg = []

[profile.dev]
opt-level = 1      # 基本优化
debug = 0          # 禁用调试信息以加快编译
split-debuginfo = "unpacked"  # 更快的调试信息处理
incremental = true  # 增量编译

[profile.dev.package."*"]
opt-level = 3       # 对所有依赖进行完全优化

[build]
rustflags = ["-C", "target-cpu=native"]  # 针对当前CPU优化