[package]
name = "czkawka-tauri"
version = "1.0.3"
edition = "2024"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "A Tauri-based frontend for Czkawka on macOS and Windows"
repository = "https://github.com/shixinhuang99/czkawka-tauri"
license = "MIT"
publish = false

[[bin]]
name = "CzkawkaTauri"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
crossbeam-channel = "0.5.14"
czkawka_core = "9.0.0"
dircpy = { version = "0.3.19", default-features = false }
home = "0.5.11"
humansize = "2.1.3"
image_hasher = "3.0.0"
infer = "0.19.0"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-opener = "2.2.6"
tauri-plugin-single-instance = "2.2.2"
trash = "5.2.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints.clippy]
uninlined_format_args = "allow"
